test/deprecated/reader-error.good
reader-error.chpl:4: In function 'readThis':
reader-error.chpl:4: error: Reader deprecated: make readThis argument generic
